Add explicit type attribute to visibility toggle button

--- a/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.html
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/input/input.component.html
@@ -27,6 +27,8 @@
       *ngTemplateOutlet="multiline ? textarea : input"
     ></ng-container>
     <button
+      type="button"
+      [attr.aria-label]="isValueVisible ? 'Hide content' : 'Show content'"
       *ngIf="visibilityToggle"
       (click)="toggleVisibility()"
       class="input__visibility-toggle"
