--- a/projects/ngx-aus-design-system/src/lib/shared/components/button/button.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/button/button.component.scss
@@ -2,17 +2,14 @@
 
 @mixin button-base {
   border: 0;
-  border-radius: 7px;
+  border-radius: 8px;
   cursor: pointer;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   font-family: $font-main;
-  font-size: 16px;
   font-style: normal;
   font-weight: 500;
-  line-height: 26px;
-  padding: 10px 15px;
   text-decoration: none;
   transition: all 0.25s;
   text-align: center;
@@ -20,7 +17,9 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    margin-right: 9px;
+    &--right {
+      order: 1;
+    }
   }
   &:focus-visible {
     outline: none;
@@ -96,6 +95,47 @@
     color: $c-white-drk;
     &.button--bg-transparent {
       background-color: transparent;
+    }
+  }
+  &--size {
+    &-small {
+      font-size: 12px;
+      line-height: 20px;
+      padding: 8px 12px;
+      .button__icon {
+        &--left {
+          margin-right: 7px;
+        }
+        &--right {
+          margin-left: 7px;
+        }
+      }
+    }
+    &-medium {
+      font-size: 14px;
+      line-height: 20px;
+      padding: 12px 16px;
+      .button__icon {
+        &--left {
+          margin-right: 9px;
+        }
+        &--right {
+          margin-left: 9px;
+        }
+      }
+    }
+    &-large {
+      font-size: 16px;
+      line-height: 24px;
+      padding: 12px 16px;
+      .button__icon {
+        &--left {
+          margin-right: 12px;
+        }
+        &--right {
+          margin-left: 12px;
+        }
+      }
     }
   }
 }
