[Colors] add colors documentation

--- a/projects/ngx-aus-design-system/src/lib/shared/components/typography/typography.component.html
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/typography/typography.component.html
@@ -132,6 +132,13 @@
     [ngStyle]="getCustomStyle()"
     [innerHTML]="text | sanitize"
   ></span>
+  <code
+    *ngSwitchCase="'code'"
+    class="code typography"
+    [attr.id]="idName || null"
+    [ngStyle]="getCustomStyle()"
+    [innerHTML]="text | sanitize"
+  ></code>
   <ng-container *ngSwitchCase="'a'">
     <a
       [attr.id]="idName || null"
