--- a/projects/ngx-aus-design-system/src/lib/shared/components/typography/typography.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/typography/typography.component.scss
@@ -1,5 +1,6 @@
 @import "styles";
 
+// Legacy
 @mixin typography-base {
   h1,
   .h1,
@@ -429,4 +430,95 @@
       )
     );
   }
+}
+
+// Presets
+$breakpoints: false, xs, sm, md, lg;
+$breakpointsMap: (
+  xs: sm,
+  sm: md,
+  md: lg,
+  lg: xl,
+);
+
+@mixin breakpoint-preset-factory(
+  $id,
+  $fontSize,
+  $lineHeight,
+  $letterSpacing,
+  $breakpoint
+) {
+  $breakpointPrefix: "";
+  @if $breakpoint != false {
+    $breakpointPrefix: "--" + #{map-get($breakpointsMap, $breakpoint)};
+  }
+  .text-preset-#{$id}#{$breakpointPrefix},
+  .text-preset-#{$id}--medium#{$breakpointPrefix},
+  .text-preset-#{$id}--bold#{$breakpointPrefix} {
+    font-family: $font-main;
+    letter-spacing: #{$letterSpacing}px;
+    @include iota-type(
+      (
+        null: (
+          #{$fontSize}px,
+          #{$lineHeight}px,
+        ),
+      )
+    );
+    @if $id == 6 {
+      text-transform: uppercase;
+    }
+    &.underline {
+      text-decoration: underline;
+    }
+  }
+  .text-preset-#{$id}#{$breakpointPrefix} {
+    font-weight: 400;
+  }
+  .text-preset-#{$id}--medium#{$breakpointPrefix} {
+    font-weight: 500;
+  }
+  .text-preset-#{$id}--bold#{$breakpointPrefix} {
+    font-weight: 700;
+  }
+}
+
+@mixin text-preset-factory(
+  $id,
+  $fontSize,
+  $lineHeight,
+  $letterSpacing,
+  $breakpoint
+) {
+  @if $breakpoint == false {
+    @include breakpoint-preset-factory(
+      $id,
+      $fontSize,
+      $lineHeight,
+      $letterSpacing,
+      false
+    );
+  } @else {
+    @include iota-breakpoint(map-get($breakpointsMap, $breakpoint)) {
+      @include breakpoint-preset-factory(
+        $id,
+        $fontSize,
+        $lineHeight,
+        $letterSpacing,
+        $breakpoint
+      );
+    }
+  }
+}
+
+@each $breakpoint in $breakpoints {
+  @include text-preset-factory(1, 52, 64, -0.16, $breakpoint);
+  @include text-preset-factory(2, 40, 52, -0.16, $breakpoint);
+  @include text-preset-factory(3, 32, 48, -0.16, $breakpoint);
+  @include text-preset-factory(4, 28, 40, 0, $breakpoint);
+  @include text-preset-factory(5, 20, 32, 0, $breakpoint);
+  @include text-preset-factory(6, 16, 24, 0.8, $breakpoint);
+  @include text-preset-factory(7, 16, 24, 0.16, $breakpoint);
+  @include text-preset-factory(8, 14, 20, 0.16, $breakpoint);
+  @include text-preset-factory(9, 12, 20, 0.16, $breakpoint);
 }
