ADS-24 add preset variants that group specific preset classes

--- a/projects/ngx-aus-design-system/src/lib/shared/components/typography/typography.component.html
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/typography/typography.component.html
@@ -1,6 +1,14 @@
 <ng-container *ngIf="!loading" [ngSwitch]="variant">
   <h1
     [class]="'typography h1 ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     *ngSwitchCase="'h1'"
     [ngStyle]="getCustomStyle()"
@@ -8,6 +16,14 @@
   ></h1>
   <h2
     [class]="'typography h2 ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     *ngSwitchCase="'h2'"
     [ngStyle]="getCustomStyle()"
@@ -15,6 +31,14 @@
   ></h2>
   <h3
     [class]="'typography h3 ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     *ngSwitchCase="'h3'"
     [ngStyle]="getCustomStyle()"
@@ -22,6 +46,14 @@
   ></h3>
   <h4
     [class]="'typography h4 ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     *ngSwitchCase="'h4'"
     [ngStyle]="getCustomStyle()"
@@ -29,6 +61,14 @@
   ></h4>
   <h5
     [class]="'typography h5 ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     *ngSwitchCase="'h5'"
     [ngStyle]="getCustomStyle()"
@@ -36,6 +76,14 @@
   ></h5>
   <h6
     [class]="'typography h6 ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     *ngSwitchCase="'h6'"
     [ngStyle]="getCustomStyle()"
@@ -43,6 +91,14 @@
   ></h6>
   <p
     [class]="'typography p ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     *ngSwitchCase="'p'"
     [ngStyle]="getCustomStyle()"
@@ -51,6 +107,14 @@
   <p
     *ngSwitchCase="'p-xs'"
     [class]="'p-xs typography p ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     [ngStyle]="getCustomStyle()"
     [innerHTML]="text | sanitize"
@@ -58,6 +122,14 @@
   <p
     *ngSwitchCase="'p-sm'"
     [class]="'p-sm typography p ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     [ngStyle]="getCustomStyle()"
     [innerHTML]="text | sanitize"
@@ -65,12 +137,28 @@
   <p
     *ngSwitchCase="'p-md'"
     [class]="'p-md typography p ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     [ngStyle]="getCustomStyle()"
     [innerHTML]="text | sanitize"
   ></p>
   <span
     [class]="'typography span ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     *ngSwitchCase="'span'"
     [ngStyle]="getCustomStyle()"
@@ -80,6 +168,14 @@
     *ngSwitchCase="'form-text'"
     [for]="for"
     [class]="'form__label typography ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     [ngStyle]="getCustomStyle()"
     [innerHTML]="text | sanitize"
@@ -87,11 +183,27 @@
   <span
     *ngSwitchCase="'form-small'"
     [class]="'form__status typography ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [ngStyle]="getCustomStyle()"
     [innerHTML]="text | sanitize"
   ></span>
   <blockquote
     [class]="'typography blockquote ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     *ngSwitchCase="'blockquote'"
     [ngStyle]="getCustomStyle()"
@@ -100,6 +212,14 @@
   <span
     *ngSwitchCase="'numbers-1'"
     [class]="'numbers numbers-1 typography ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     [ngStyle]="getCustomStyle()"
     [innerHTML]="text | sanitize"
@@ -107,6 +227,14 @@
   <span
     *ngSwitchCase="'numbers-2'"
     [class]="'numbers numbers-2 typography ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     [ngStyle]="getCustomStyle()"
     [innerHTML]="text | sanitize"
@@ -114,6 +242,14 @@
   <span
     *ngSwitchCase="'numbers-3'"
     [class]="'numbers numbers-3 typography ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     [ngStyle]="getCustomStyle()"
     [innerHTML]="text | sanitize"
@@ -121,6 +257,14 @@
   <span
     *ngSwitchCase="'numbers-4'"
     [class]="'numbers numbers-4 typography ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     [ngStyle]="getCustomStyle()"
     [innerHTML]="text | sanitize"
@@ -128,6 +272,14 @@
   <span
     *ngSwitchCase="'numbers-5'"
     [class]="'numbers numbers-5 typography ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     [ngStyle]="getCustomStyle()"
     [innerHTML]="text | sanitize"
@@ -135,6 +287,14 @@
   <code
     *ngSwitchCase="'code'"
     [class]="'code typography ' + (presetClassNames | array2string)"
+    [ngClass]="{
+      'preset-variant--heading-1': presetVariant === 'heading-1',
+      'preset-variant--heading-2': presetVariant === 'heading-2',
+      'preset-variant--heading-3': presetVariant === 'heading-3',
+      'preset-variant--heading-4': presetVariant === 'heading-4',
+      'preset-variant--heading-5': presetVariant === 'heading-5',
+      'preset-variant--heading-6': presetVariant === 'heading-6'
+    }"
     [attr.id]="idName || null"
     [ngStyle]="getCustomStyle()"
     [innerHTML]="text | sanitize"
@@ -145,6 +305,14 @@
       *ngIf="route"
       [routerLink]="!disabled && route ? [route] : null"
       [class]="getLinkClasses() + ' ' + (presetClassNames | array2string)"
+      [ngClass]="{
+        'preset-variant--heading-1': presetVariant === 'heading-1',
+        'preset-variant--heading-2': presetVariant === 'heading-2',
+        'preset-variant--heading-3': presetVariant === 'heading-3',
+        'preset-variant--heading-4': presetVariant === 'heading-4',
+        'preset-variant--heading-5': presetVariant === 'heading-5',
+        'preset-variant--heading-6': presetVariant === 'heading-6'
+      }"
       [tabindex]="disabled ? -1 : 0"
       [attr.aria-disabled]="disabled || null"
       [innerHTML]="text | sanitize"
@@ -156,6 +324,14 @@
       *ngIf="href"
       [href]="!disabled && href ? href : null"
       [class]="getLinkClasses() + ' ' + (presetClassNames | array2string)"
+      [ngClass]="{
+        'preset-variant--heading-1': presetVariant === 'heading-1',
+        'preset-variant--heading-2': presetVariant === 'heading-2',
+        'preset-variant--heading-3': presetVariant === 'heading-3',
+        'preset-variant--heading-4': presetVariant === 'heading-4',
+        'preset-variant--heading-5': presetVariant === 'heading-5',
+        'preset-variant--heading-6': presetVariant === 'heading-6'
+      }"
       [tabindex]="disabled ? -1 : 0"
       [attr.aria-disabled]="disabled || null"
       [innerHTML]="text | sanitize"
@@ -167,6 +343,14 @@
       *ngIf="route"
       [routerLink]="!disabled && route ? [route] : null"
       [class]="getLinkClasses() + ' ' + (presetClassNames | array2string)"
+      [ngClass]="{
+        'preset-variant--heading-1': presetVariant === 'heading-1',
+        'preset-variant--heading-2': presetVariant === 'heading-2',
+        'preset-variant--heading-3': presetVariant === 'heading-3',
+        'preset-variant--heading-4': presetVariant === 'heading-4',
+        'preset-variant--heading-5': presetVariant === 'heading-5',
+        'preset-variant--heading-6': presetVariant === 'heading-6'
+      }"
       [tabindex]="disabled ? -1 : 0"
       [attr.aria-disabled]="disabled || null"
       [innerHTML]="text | sanitize"
@@ -178,6 +362,14 @@
       *ngIf="href"
       [href]="!disabled && href ? href : null"
       [class]="getLinkClasses() + ' ' + (presetClassNames | array2string)"
+      [ngClass]="{
+        'preset-variant--heading-1': presetVariant === 'heading-1',
+        'preset-variant--heading-2': presetVariant === 'heading-2',
+        'preset-variant--heading-3': presetVariant === 'heading-3',
+        'preset-variant--heading-4': presetVariant === 'heading-4',
+        'preset-variant--heading-5': presetVariant === 'heading-5',
+        'preset-variant--heading-6': presetVariant === 'heading-6'
+      }"
       [tabindex]="disabled ? -1 : 0"
       [attr.aria-disabled]="disabled || null"
       [innerHTML]="text | sanitize"
