--- a/src/app/documentation/components/page-layout/page-layout.component.html
+++ b/src/app/documentation/components/page-layout/page-layout.component.html
@@ -10,7 +10,8 @@
     <div class="page__intro">
       <aus-typography
         [text]="title"
-        [presetClassNames]="['text-preset-1--bold']"
+        variant="h1"
+        presetVariant="heading-1"
       ></aus-typography>
       <aus-wysiwyg
         *ngIf="description"
