ADS-24 adjust styles of documentation layout components

--- a/src/app/documentation/components/page-layout/page-layout.component.html
+++ b/src/app/documentation/components/page-layout/page-layout.component.html
@@ -4,7 +4,7 @@
       alt="Aramark logo"
       src="https://cdn.bfldr.com/4IC075XI/at/nkqwwn9c2cqffsqj8jwjx4mb/Aramark_New_PMS.eps?auto=webp&width=400&height=101&format=png"
     />
-    <aus-typography [text]="title"></aus-typography>
+    <aus-typography [text]="subtitle"></aus-typography>
   </div>
   <div class="page__main">
     <div class="page__intro">
