--- a/src/app/documentation/pages/colors/colors.component.html
+++ b/src/app/documentation/pages/colors/colors.component.html
@@ -1,4 +1,4 @@
-<app-page-layout title="Colors">
+<app-page-layout subtitle="Colors" title="Colors">
   <app-page-section *ngFor="let item of items" [title]="item.name">
     <table>
       <thead>
