--- a/src/app/documentation/pages/typography/typography.component.html
+++ b/src/app/documentation/pages/typography/typography.component.html
@@ -1,10 +1,10 @@
 <app-page-layout
-  title="Typography Presets"
-  description="
-    <p>Starting with our typography, our goal is to create the smallest number of elements to help design the greatest variety of interfaces. We have a core set of 9 typographic presets that can be used across the Aramark experience.</p>
-    <p>We have added “modifiers” to these presets for different weights.</p>
-    <p>Using this method, we should be able to apply these presets to any typographical element (H1s, H2s, links, labels, and buttons are a few examples) without needing to re-define typographic style outside of our core typography scale. For more on this method, see <a href='https://danmall.com/posts/typography-in-design-systems/'>Typography in Design Systems</a>.</p>
-    <p>Our base text size is 16px / 1 rem. Our font is Gotham.</p>
+  subtitle="Typography"
+  [title]="story === 'headings' ? 'Headings' : 'Typography Presets'"
+  [description]="
+    story === 'headings'
+      ? '<p>Now that we have our presets created, we can apply these to desktop, tablet, and mobile heading levels.</p>'
+      : '<p>Starting with our typography, our goal is to create the smallest number of elements to help design the greatest variety of interfaces. We have a core set of 9 typographic presets that can be used across the Aramark experience.</p><p>We have added “modifiers” to these presets for different weights.</p><p>Using this method, we should be able to apply these presets to any typographical element (H1s, H2s, links, labels, and buttons are a few examples) without needing to re-define typographic style outside of our core typography scale. For more on this method, see <a href=https://danmall.com/posts/typography-in-design-systems/>Typography in Design Systems</a>.</p><p>Our base text size is 16px / 1 rem. Our font is Gotham.</p>'
   "
 >
   <app-page-section *ngFor="let item of items" [title]="item.name">
