ADS-6 display colors in rgb

--- a/src/app/documentation/pages/colors/colors.component.html
+++ b/src/app/documentation/pages/colors/colors.component.html
@@ -35,6 +35,10 @@
           </td>
           <td>
             <aus-typography variant="p-xs" [text]="color.val"></aus-typography>
+            <aus-typography
+              variant="p-xs"
+              [text]="toRgb(color.val)"
+            ></aus-typography>
           </td>
           <td>
             <aus-typography
