ADS-55 add support for new naming conventions

--- a/projects/ngx-aus-design-system/assets/styles/settings/_colors.scss
+++ b/projects/ngx-aus-design-system/assets/styles/settings/_colors.scss
@@ -72,3 +72,7 @@ $colors: (
     overlay: rgba(0, 40, 65, 0.5),
   ),
 );
+
+@function color($palette, $color) {
+  @return map-get($colors, $palette, $color);
+}
