ADS-55 adjust icon styles for different IconButton sizes

--- a/projects/ngx-aus-design-system/src/lib/shared/components/icon-button/icon-button.component.html
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/icon-button/icon-button.component.html
@@ -10,10 +10,5 @@
   [attr.aria-label]="ariaLabel"
   [tabIndex]="disabled ? -1 : 0"
 >
-  <aus-icon
-    aria-hidden="true"
-    class="btn__icon"
-    [name]="icon"
-    size="xs"
-  ></aus-icon>
+  <aus-icon aria-hidden="true" class="btn__icon" [name]="icon"></aus-icon>
 </button>
