ADS-55 adjust icon and label color when Button is disabled

--- a/projects/ngx-aus-design-system/src/lib/shared/components/button/button.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/button/button.component.scss
@@ -218,6 +218,15 @@
     pointer-events: none;
     background-color: color(neutral, 01);
     color: color(neutral, 06);
+    .button__icon,
+    .button__label {
+      ::ng-deep {
+        .icon span,
+        .typography {
+          color: color(neutral, 06);
+        }
+      }
+    }
     &.button--bg-transparent {
       background-color: transparent;
     }
