ADS-28 adjust class names

--- a/projects/ngx-aus-design-system/src/lib/shared/components/typography/typography.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/typography/typography.component.scss
@@ -364,18 +364,6 @@
           justify-content: center;
         }
       }
-      &:not(.link__icon--template) {
-        ::ng-deep {
-          svg {
-            width: 0.875em !important;
-            height: 0.875em !important;
-            transform: translateY(-2px);
-            @include iota-breakpoint(md) {
-              transform: translateY(-1px);
-            }
-          }
-        }
-      }
       &--template {
         transform: translateY(-2px);
       }
@@ -445,6 +433,22 @@
       .link {
         &__label {
           text-decoration: none;
+        }
+      }
+    }
+    &--inline {
+      .link {
+        &__icon {
+          ::ng-deep {
+            svg {
+              width: 0.875em !important;
+              height: 0.875em !important;
+              transform: translateY(-2px);
+              @include iota-breakpoint(md) {
+                transform: translateY(-1px);
+              }
+            }
+          }
         }
       }
     }
