Build Feature Alerts - Successful and Error

--- a/projects/ngx-aus-design-system/src/lib/blocks/components/alerts/alerts.component.html
+++ b/projects/ngx-aus-design-system/src/lib/blocks/components/alerts/alerts.component.html
@@ -1,11 +1,12 @@
 <div class="alerts">
-  <ng-container *ngFor="let alert of alerts ">
+  <div *ngFor="let alert of alerts; index as i" class="alert">
     <aus-alert
       class="alert"
       [alertType]="alert['alertType']"
       [title]="alert['title']"
       [msg]="alert['msg']"
       [timeToHide]="alert['timeToHide']"
+      (onHide)="hide(i)"
     ></aus-alert>
-  </ng-container>
+  </div>
 </div>
